Added A OP apple

--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -11,6 +11,7 @@
 	"item.examplemod.example_crystal": "Example Crystal",
 	"item.examplemod.wild_boar_spawn_egg": "Wild Boar Spawn Egg",
 
+	"item.examplemod.ruby_apple": "Ruby apple",
 
 	"itemGroup.examplemod": "Example Mod",
 
