--- a/src/main/resources/assets/examplemod/lang/en_us.json
+++ b/src/main/resources/assets/examplemod/lang/en_us.json
@@ -1,5 +1,6 @@
 {
 	"block.examplemod.example_ore": "Example Ore",
+	"block.examplemod.ruby_ore": "Ruby Ore",
 	"block.examplemod.example_block": "Example Block",
 	"block.examplemod.mini_model": "Mini Model",
 	"block.examplemod.heat_collector": "Heat Collector",
